gwt-diagrams-0.1-RC01:
	* Base structures (Connector, Connection, ConnectionDataCalculator, ...)
	* Functionality (RectilinearTwoEndedConnection, BezierTwoEndedConnection)